# moveup-content-ops-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
agents/: __init__.py  content_ops_agent.py
backend/: __init__.py  main.py
database/: README.md
docs/: architecture.md
frontend/: __init__.py  dashboard.py
prompts/: README.md
reports/: README.md
scripts/: README.md
services/: __init__.py  analytics.py  models.py  reporting.py  sample_data.py  settings.py  workflow.py  youtube.py
tests/: __init__.py  test_health.py
