[project]
name = "moveup-content-ops-bot"
version = "0.1.0"
description = "AI analytics platform for content operations workflows."
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "streamlit",
    "openai",
    "langchain",
    "langchain-openai",
    "google-api-python-client",
    "plotly",
    "pandas",
    "sqlalchemy",
    "python-dotenv",
    "pydantic",
]

[dependency-groups]
dev = [
    "httpx",
    "pytest",
    "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
